# rippled-packages

./: .gitlab-ci.yml  CMakeLists.txt  README.md  RippledRelease.cmake  build_package.sh  smoketest.sh
.github/actions/build_fake/: action.yml
.github/actions/build_package/: action.yml
.github/actions/get_version/: action.yml
.github/workflows/: deb.yml  package_build.yml  rpm.yml
Builds/containers/packaging/dpkg/: build_dpkg.sh
Builds/containers/packaging/dpkg/debian/: rules
Builds/containers/packaging/rpm/: build_rpm.sh  rippled.spec
test/: fake_install.sh  install.sh
